ViewとFormを修正、不要なファイルを削除

--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -11,11 +11,11 @@
     = f.text_field :name
   .field
     = f.label :email
-    = f.text_field :email
+    = f.email_field :email
   .field
-    = f.label :crypted_password
-    = f.text_field :crypted_password
+    = f.label :password
+    = f.password_field :password
   .field
-    = f.label :salt
-    = f.text_field :salt
+    = f.label :password_confirmation
+    = f.pssword_field :password_confirmation
   .actions = f.submit
