--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,5 +8,18 @@ html
     = csp_meta_tag
     = stylesheet_link_tag 'application', media: 'all'
     = javascript_pack_tag 'application'
-  body
-    = yield
+body
+  #nav
+    - if current_user
+      = link_to "Edit Profile", edit_user_path(current_user.id)
+      = link_to "Logout", :logout, method: :post
+    - else
+      = link_to "Register", new_user_path
+      |  | 
+      = link_to "Login", :login
+  div
+    p#notice
+      = flash[:notice]
+    p#alert
+      = flash[:alert]
+  = yield
