--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -17,5 +17,5 @@
     = f.password_field :password
   .field
     = f.label :password_confirmation
-    = f.pssword_field :password_confirmation
+    = f.password_field :password_confirmation
   .actions = f.submit
