--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -1,7 +1,7 @@
 h1 Listing users
 
-table
-  thead
+table.table.table-hover
+  thead.thead-default
     tr
       th Name
       th Email
@@ -18,6 +18,5 @@ table
         td = link_to 'Edit', edit_user_path(user)
         td = link_to 'Destroy', user, data: { confirm: 'Are you sure?' }, method: :delete
 
-br
 
 = link_to 'New User', new_user_path
