--- a/app/views/games/show.html.slim
+++ b/app/views/games/show.html.slim
@@ -1,2 +1,22 @@
 h1 Games#show
-p Find me in app/views/games/show.html.slim
+
+table.table.table-hover
+  tbody
+    tr 
+      th= Game.human_attribute_name(:title)
+      td= @game.title
+    tr 
+      th= Game.human_attribute_name(:description)
+      td= @game.description
+    tr 
+      th= Game.human_attribute_name(:release_date)
+      td= @game.release_date
+    tr 
+      th= Game.human_attribute_name(:production)
+      td= @game.production
+
+
+= render 'reviews/reviews', reviews: @reviews
+/ = render partial: "reviews/reviews", collection: @reviews
+
+= render 'reviews/form', review: @review, game: @game
