--- a/app/views/games/index.html.slim
+++ b/app/views/games/index.html.slim
@@ -15,6 +15,9 @@ table.table.table-hover
         td= game.release_date
         td= game.description
         td= game.production
-        td
+        td  
+            = link_to 'Show', game,class: 'mr-3'
             = link_to '削除', game_path(game), class: 'mr-3', method: :delete, data: { confirm: '本当に削除しますか？' }
+  
+= link_to 'New Game', new_game_path
 
