--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -14,6 +14,7 @@ body
     - if current_user
       = link_to "Edit Profile", edit_user_path(current_user.id)
       = link_to "Logout", :logout, method: :delete
+      = link_to "Game", games_path
     - else
       = link_to "Register", new_user_path
       |  | 
