Viewの調整ログイン状態での制御

--- a/app/views/games/index.html.slim
+++ b/app/views/games/index.html.slim
@@ -18,6 +18,7 @@ table.table.table-hover
         td  
             = link_to 'Show', game,class: 'mr-3'
             = link_to '削除', game_path(game), class: 'mr-3', method: :delete, data: { confirm: '本当に削除しますか？' }
-  
-= link_to 'New Game', new_game_path
+
+- if current_user&.admin?
+  = link_to 'New Game', new_game_path
 
