--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -18,6 +18,7 @@ body
     - else
       = link_to "Register", new_user_path
       |  | 
+      = link_to "Game", games_path
       = link_to "Login", :login
   div
     p#notice
