--- a/app/views/games/new.html.slim
+++ b/app/views/games/new.html.slim
@@ -4,6 +4,9 @@ h1 Games#new
   = form_with model: @game, class: 'card-body', local: true do |f|
     / = render 'shared/error_messages', object: @user
     .form-group
+      = f.label :image, class: 'bmb-label-floating'
+      = f.file_field :image, class: 'form-control'
+    .form-group
       = f.label :title, class: 'bmd-label-floating'
       = f.text_field :title, class: 'form-control'
     .form-group
