マイページ実装

--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -7,4 +7,6 @@
       = link_to "Logout", :logout, class: 'nav-link', method: :delete
     li.nav-item
       = link_to "Game", games_path, class: 'nav-link'
+    li.nav-item
+      = link_to "Mypage", mypage_path, class: 'nav-link'
 
