パンくずを表示まで

--- a/app/views/games/index.html.slim
+++ b/app/views/games/index.html.slim
@@ -1,4 +1,7 @@
 h1 Games#index
+
+- breadcrumb :root
+= render "layouts/breadcrumbs"
               
 table.table.table-hover
   thead.thead-default
