--- a/app/views/layouts/mypage.html.slim
+++ b/app/views/layouts/mypage.html.slim
@@ -16,15 +16,19 @@ html
       = render 'shared/before_login_header'
     main
       .container
-        - breadcrumb :edit_mypage
-        = render "layouts/breadcrumbs"
-        .row
-          .col-md-10.offset-md-1
-            .card
-              .card-body
-                .row
-                  .col-md-3
-                    = render 'mypages/shared/sidebar'
-                  .col-md-9
-                    .mypage_content
-                      = yield
+
+          = render "layouts/breadcrumbs"
+          .row
+            .col-md-10.offset-md-1
+              .card
+                .card-body
+                  .row
+                    .col-md-3
+                      = render 'mypages/shared/sidebar'
+                    .col-md-9
+                      .mypage_content
+                        = yield
+
+
+          /                         - breadcrumb :edit_mypage
+          / = render "layouts/breadcrumbs"
